tests/errors/intrinsics6.f90
program intrinsics6
    print *, ieor(1, 1_8)
end program